# rna_3d_prediction

./: README.md
.github/workflows/: config.yml  main.yml
api/: Dockerfile  docker-compose.yaml  pyproject.toml
api/api/: main.py
aws_env/docker/: Dockerfile  docker-compose.yml
aws_env/kubernetes/cluster/: eks_cluster.yaml.template
aws_env/kubernetes/setup/: Chart.yaml  values.yaml
aws_env/kubernetes/setup/templates/: app_setup.yaml  autoscaler.yaml  deployment.yaml  dns.yaml  volume.yaml
aws_env/kubernetes/src/: eks_setup.sh  kubernetes_setup.sh
aws_env/terraform/: domain.template  ecr.tf  lambda.template  main.template  network.template  policy.template  terraform_setup.sh
proteinex_container/: Dockerfile  docker-compose.yaml
rna-frontend/: Dockerfile  docker-compose.yaml  package-lock.json  package.json
rna-frontend/public/: index.html
rna-frontend/src/: App.js  index.js
